# chat_test

./: .gitignore  LICENCE  README.md  README.rst  requirements.txt  settings.py  setup.cfg  setup.py
altroochat/: admin.py  api.py  apps.py  consumers.py  models.py  pagination.py  routing.py  serializers.py  urls.py
altroochat/auth/: jwt_auth.py  jwt_auth_middleware.py  middleware.py
altroochat/migrations/: 0001_initial.py  0002_auto_20200123_0934.py  0003_auto_20200123_1616.py  0004_auto_20200124_1206.py
altroochat/templates/: base.html
altroochat/templates/core/: chat.html
altroochat/tests/: test_api.py  test_model.py
altroodemo/: routing.py  urls.py  wsgi.py
djchat/: apps.py
requirements/: app.txt  dev.txt
settings/: #dev.py#  base.py  dev.py
static/js/: app.js
templates/: base.html
templates/admin/: base_site.html
templates/core/: chat.html
templates/registration/: login.html
