[metadata]
name = altroochat
version = 0.1
description = "Django based chat appliation using django channels".
long_description = file: README.rst
url = https://github.com/Altroo/chat_test
author = Naresh Kumar Jaggi
author_email = naresh.jaggi@exiverprojects.com
license = MIT
classifiers =
	    Environment :: Web Environment
	    Framework :: Django :: 3.0.2
	    Intended Audience :: Developers
	    License :: OSI Approved :: MIT License
	    Operating System :: OS Independent
	    Programming Language :: Python :: 3.8 :: Only
	    Topic :: Internet :: WWW/HTTP
	    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
		 channels==2.4.0
		 channels-redis==2.4.1
		 Pillow==7.0.0
		 djangorestframework==3.11.0
		 django-filter==2.2.0
		 Markdown==3.1.1